divided appendTo in 3

--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,11 @@ body {
 	background:#C0C0C0;
 }
 
+table {
+	
+}
+
 thead {
-	margin-bottom: 50px;
 }
 
 th {
@@ -26,6 +29,14 @@ table {
 	margin: 0 auto;
 }
 
+td {
+	border-bottom: 1px solid white;
+}
+
 td:first-of-type {
-	width: 50%;
-};
+	width: 60%;
+}
+
+td:last-of-type{
+	width: 10%;
+}
